feat: construct the basic html sceleton of how the ui might look like

--- a/src/template.html
+++ b/src/template.html
@@ -7,12 +7,26 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <h1>Welcome to My Website</h1>
-      </header>
-      <main>
-        <p>This is a basic HTML boilerplate.</p>
-      </main>
+      <div id="nav-bar">
+        <div id="search-container">
+          <button type="button" id="search-btn">Search</button>
+        </div>
+        <div id="logo">Atmos</div>
+        <button type="button" id="metrics-toggle">°C</button>
+      </div>
+      <div id="summary-container">
+        <h1 id="location">Bruchsal</h1>
+        <img id="icon" src="#" alt="current weather conditions icon" />
+        <h2 id="temp">12<span class="unit">°C</span></h2>
+        <h2 id="feels-like">11<span class="unit">°C</span></h2>
+        <h3 id="conditions">Scattered clouds</h3>
+      </div>
+      <div id="24hrs-container">
+        <h2 id="next24hrs-title">Next 24 hours</h2>
+      </div>
+      <div id="five-day-container">
+        <h2 id="five-day-title">Five-day forecast</h2>
+      </div>
       <footer>
         <p>created by <a href="https://github.com/dejanpls/">@dejanpls</a></p>
       </footer>
