refactor: rename summary id to main

--- a/src/template.html
+++ b/src/template.html
@@ -13,23 +13,24 @@
         <div id="logo">Atmos</div>
         <button type="button" id="metrics-toggle">°C</button>
       </div>
-      <div id="content">
+      <div id="main">
         <div id="summary-container">
-          <h1 id="location">Moscow</h1>
+          <p id="time"></p>
+          <h1 id="location"></h1>
 
           <img id="icon" src="#" alt="current weather conditions icon" />
           <h2 id="temp">
-            <span id="temp-int">11</span>
+            <span id="temp-int"></span>
             <span class="unit">°C</span>
           </h2>
 
           <h4 id="feels-like">
             <span id="feels-like-txt">Feels like</span>
-            <span id="feels-like-int">11</span>
+            <span id="feels-like-int"></span>
             <span class="unit">°C</span>
           </h4>
 
-          <h3 id="conditions">Scattered clouds</h3>
+          <h3 id="conditions"></h3>
         </div>
         <!-- <div id="24hrs-container">
           <h2 id="next24hrs-title">Next 24 hours</h2>
