chore: uncomment cards container

--- a/src/template.html
+++ b/src/template.html
@@ -32,10 +32,10 @@
 
           <h3 id="conditions"></h3>
         </div>
-        <!-- <div id="24hrs-container">
+        <div id="next24hrs-container">
           <h2 id="next24hrs-title">Next 24 hours</h2>
         </div>
-        <div id="five-day-container">
+        <!-- <div id="five-day-container">
           <h2 id="five-day-title">Five-day forecast</h2>
         </div> -->
       </div>
