chore: uncomment the five-day-container

--- a/src/template.html
+++ b/src/template.html
@@ -35,9 +35,9 @@
         <div id="next24hrs-container">
           <h2 id="next24hrs-title">Next 24 hours</h2>
         </div>
-        <!-- <div id="five-day-container">
+        <div id="five-day-container">
           <h2 id="five-day-title">Five-day forecast</h2>
-        </div> -->
+        </div>
       </div>
       <footer>
         <p>created by <a href="https://github.com/dejanpls/">@dejanpls</a></p>
