feat: update retrieveLocation method name from 'data'

--- a/src/template.html
+++ b/src/template.html
@@ -32,11 +32,15 @@
 
           <h3 id="conditions"></h3>
         </div>
-        <div id="next24hrs-container">
+
+        <div id="cards-container">
           <h2 id="next24hrs-title">Next 24 hours</h2>
+          <div id="next24hrs-container"></div>
         </div>
-        <div id="five-day-container">
+
+        <div id="five-day-forecast-container">
           <h2 id="five-day-title">Five-day forecast</h2>
+          <div id="five-day-container"></div>
         </div>
       </div>
       <footer>
