feat: implement Units class to handle unit change between metric and imperial unit

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
         <div id="logo">Atmos</div>
         <button type="button" id="metrics-toggle">°C</button>
       </div>
-      <div id="main">
+      <div id="main" data-metrics="metric">
         <div id="summary-container">
           <p id="time"></p>
           <h1 id="location"></h1>
@@ -21,13 +21,11 @@
           <img id="icon" src="#" alt="current weather conditions icon" />
           <h2 id="temp">
             <span id="temp-int"></span>
-            <span class="unit">°C</span>
           </h2>
 
           <h4 id="feels-like">
             <span id="feels-like-txt">Feels like</span>
             <span id="feels-like-int"></span>
-            <span class="unit">°C</span>
           </h4>
 
           <h3 id="conditions"></h3>
