style: position nav-bar menu and replace button's textContent with material icons

--- a/src/template.html
+++ b/src/template.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Material icons -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Atmos | Weather Forecast</title>
   </head>
   <body>
     <div class="wrapper">
       <div id="nav-bar">
-        <button type="button" id="search-toggle">Search</button>
+        <button type="button" id="search-toggle" class="material-icons">
+          search
+        </button>
         <div id="search-container"></div>
         <div id="logo">Atmos</div>
         <button type="button" id="metrics-toggle">°C</button>
