fix: rename 'data-metrics' attribute and id to 'data-unit'

--- a/src/template.html
+++ b/src/template.html
@@ -19,9 +19,9 @@
         </button>
         <div id="search-container"></div>
         <div id="logo">Atmos</div>
-        <button type="button" id="metrics-toggle">°C</button>
+        <button type="button" id="unit-toggle">°C</button>
       </div>
-      <div id="main" data-metrics="metric">
+      <div id="main" data-unit="metric">
         <div id="summary-container">
           <p id="time"></p>
           <h1 id="location"></h1>
