--- a/src/template.html
+++ b/src/template.html
@@ -13,45 +13,54 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="nav-bar">
-        <button type="button" id="search-toggle" class="material-icons">
-          search
-        </button>
-        <div id="search-container"></div>
-        <div id="logo">Atmos</div>
-        <button type="button" id="unit-toggle">°C</button>
+      <div id="nav-container">
+        <div id="nav-bar">
+          <button type="button" id="search-toggle" class="material-icons">
+            search
+          </button>
+          <div id="search-container"></div>
+          <div id="logo">Atmos</div>
+          <button type="button" id="unit-toggle">°C</button>
+        </div>
       </div>
+
       <div id="main" data-unit="metric">
         <div id="summary-container">
-          <p id="time"></p>
-          <h1 id="location"></h1>
+          <div id="summary">
+            <p id="time"></p>
+            <h1 id="location"></h1>
 
-          <img id="icon" src="#" alt="current weather conditions icon" />
-          <h2 id="temp">
-            <span id="temp-int"></span>
-          </h2>
+            <img id="icon" src="#" alt="current weather conditions icon" />
+            <h2 id="temp">
+              <span id="temp-int"></span>
+            </h2>
 
-          <h4 id="feels-like">
-            <span id="feels-like-txt">Feels like</span>
-            <span id="feels-like-int"></span>
-          </h4>
+            <h4 id="feels-like">
+              <span id="feels-like-txt">Feels like</span>
+              <span id="feels-like-int"></span>
+            </h4>
 
-          <h3 id="conditions"></h3>
+            <h3 id="conditions"></h3>
+          </div>
         </div>
 
-        <div id="cards-container">
+        <div id="title-container">
           <h2 id="next24hrs-title">Next 24 hours</h2>
-          <div id="next24hrs-container"></div>
+        </div>
+        <div id="cards-container">
+          <div id="cards"></div>
         </div>
 
         <div id="five-day-forecast-container">
-          <h2 id="five-day-title">Five-day forecast</h2>
-          <div id="five-day-container"></div>
+          <div id="five-day-forecast">
+            <h2 id="five-day-title">Five-day forecast</h2>
+            <div id="five-day-container"></div>
+          </div>
         </div>
+        <footer>
+          <p>created by <a href="https://github.com/dejanpls/">@dejanpls</a></p>
+        </footer>
       </div>
-      <footer>
-        <p>created by <a href="https://github.com/dejanpls/">@dejanpls</a></p>
-      </footer>
     </div>
   </body>
 </html>
