style: remove positioning borders and change element colors

--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,15 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Potta+One&family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Atmos | Weather Forecast</title>
   </head>
   <body>
